# pinmame-tester

./: .gitignore  Cargo.toml  README.md  build.rs  external.sh  genbind.sh  wrapper.h
.github/workflows/: rust.yml
src/: db.rs  dmd.rs  keyboard.rs  libpinmame.rs  main.rs  pinmame.rs  switches.rs
