[package]
name = "pinmame-test"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
indexmap = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
vsprintf = "2.0.0"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["gfx", "ttf"] # , "image", "mixer", "ttf"

[build-dependencies]
bindgen = "0.69.2"
